=== Alexander 0.3c2 (v1) ===

2002-04-23  Chris Blumenberg  <cblu@apple.com>

	* WebKit.pbproj/project.pbxproj:

	Took IFDownloadHandler.h out of the public headers.

	* WebView.subproj/IFLocationChangeHandler.h:

	Removed deprecated methods.

	* WebView.subproj/IFWebFrame.mm:
	(-[IFWebFrame setProvisionalDataSource:]):

	Don't call locationChangeStarted anymore.

2002-04-23  Chris Blumenberg  <cblu@apple.com>

	* MIME.subproj/IFDownloadHandler.h:
	* MIME.subproj/IFDownloadHandler.m: Removed.
	* MIME.subproj/IFDownloadHandler.mm: Added.
	(-[IFDownloadHandler initWithDataSource:]):
	(-[IFDownloadHandler dealloc]):
	* MIME.subproj/IFDownloadHandlerPrivate.h: Removed.
	* MIME.subproj/IFDownloadHandlerPrivate.m: Removed.

	Made IFDownloadHandler a private class that retains the data source
	and saves the data to disk.

	* WebKit.pbproj/project.pbxproj:

	Removed IFDownloadHandlerPrivate

	* WebView.subproj/IFBaseWebControllerPrivate.mm:
	(-[IFBaseWebController _mainReceivedProgress:forResource:fromDataSource:]):

	Only send locationChangeCommitted if its shown inline.

	* WebView.subproj/IFMainURLHandleClient.mm:
	(-[IFMainURLHandleClient IFURLHandleResourceDidFinishLoading:data:]):
	
	Save data with IFDownloadHandler

	(-[IFMainURLHandleClient IFURLHandle:resourceDataDidBecomeAvailable:]):
	
	If its a download, set the provisionalDataSource on the frame to nil.	

	* WebView.subproj/IFWebDataSource.h:
	* WebView.subproj/IFWebDataSource.mm:
	(-[IFWebDataSource webFrame]):
	(-[IFWebDataSource pageTitle]):
	(-[IFWebDataSource contentPolicy]):

	Added some accessor methods. Spelling fix pageTitle.

2002-04-23  Kenneth Kocienda  <kocienda@apple.com>

        Reviewed by: Darin Adler

        Fix for Radar 2908403 (Fix names in WebFoundation extensions code)

        Extensions code in WebFoundation now is in its own namespace.
        Where we have added categories to existing Foundation and AppKit
        classes, the categories begin with the IF prefix. All method names