@@ -8,68 +8,7 @@
 #import <Cocoa/Cocoa.h>
 
 /*
-   ============================================================================= 
-
-    Typical usage of a IFWebView.
-    
-    NSURL *url = [NSURL URLWithString: @"http://www.apple.com"];
-    IFWebDataSource *dataSource = [[IFWebDataSource alloc] initWithURL: url];
-    IFWebView *view = [[IFWebView alloc] initWithFrame: myFrame];
-    IFDefaultWebController *controller = [[IFDefaultWebController alloc] initWithView: view dataSource: dataSource];
-
-    [[[view controller] dataSource] startLoading];
-
-    ...
-
-    
-    What is the behaviour of the view after it has been initialized and 
-    startLoading: is called?
-    
-        1.  No IFLocationChangedHandler messages will be sent until 
-            startLoading: is called.  After startLoading is called a loadingStarted
-            message will be sent to the controller.  The view will remain unchanged 
-            until the controller receives a receivedDataForLocation: message 
-            from the data source.  
-                                    
-            If stopLoading is called before receipt of a receivedDataForLocation:, loading will 
-            abort, the view will be unchanged, and the controller will receive a loadingCancelled 
-            message.
-            
-            Controllers should initiate progress indicators upon receipt of loadingStarted,
-            and terminate when either a loadingCancelled or loadingStopped is received.
-        
-        2.  After the controller receives its first receivedDataForLocation: the contents of
-            the view will be cleared and layout may begin.
-            
-        3.  Upon subsequent receipt of receivedDataForLocation: messages the controller
-            may trigger a document layout.  Note that layouts may be coalesced.  If stopLoading
-            is called before the document has fully loaded, the layout will be incomplete, and a
-            loadingStopped message will be sent to the controller
-            
-        4.  When the controller receives a receivedDataForLocation: with a IFLoadProgress that 
-            contains bytesSoFar==totalToLoad the location specified is completely loaded.  Clients
-            may display the location string to indicate completion of a loaded resource.
-            When the controller receives a loadingFinished message the main document and all it
-            resources have been loaded.  Controllers should terminate progress indicators at 
-            this point.
-                    
     ============================================================================= 
-    
-    Changes:
-    
-    2001-12-14
-        
-        Added the following methods:
-            - (void)searchFor: (NSString *)string direction: (BOOL)forward caseSensitive: (BOOL)case
-            - deselectText;
-            - (NSAttributedString *)selectedText;
-       
-        
-        Remove explicit API to get/set the selection range.  This will be postponed until we
-        have a DOM API that allows us to express selection ranges correctly.  Instead we have API
-        that should support searching and getting a NSAttributedString that corresponds to
-        the selected text.
-        
 */
 
 @class IFWebDataSource;
@@ -84,12 +23,6 @@
 }
 
 - initWithFrame: (NSRect)frame;
-
-#ifdef TENTATIVE_API
-// Set and get the delegate.
-- (void)setDelegate: (id <IFWebViewDelegate>)delegate;
-- (id <IFWebViewDelegate>)delegate;
-#endif
 
 // Note that the controller is not retained.
 - (id <IFWebController>)controller;
